[package]
name = "ourea-desktop"
version = "0.1.0"
description = "Desktop shell for Ourea"
authors = ["Ourea Zone"]
edition = "2021"

[lib]
name = "ourea_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
